# wordle-react-gtk

./: .gitignore  build-flatpak.sh  com.rodrigotavares.Wordle.yml  import-words.js  meson.build  package-lock.json  package.json  rollup.config.js  tsconfig.json
build-aux/flatpak/: build-flatpak.sh  com.rodrigotavares.Wordle.yml  wordle
data/: com.rodrigotavares.Wordle.desktop  styles.css
data/words/: available-en.json  solutions-en.json
src/: index.tsx  words.test.ts  words.ts
src/components/: App.tsx  ErrorAlert.tsx  GuessGrid.tsx  Keyboard.tsx  Toast.tsx
src/data/: styles.css
src/hooks/: useGameState.ts  useKeyPressHandler.tsx  useKeyboardState.ts
src/models/: GameState.ts  Settings.ts
